kubernetes/apps/firefly/firefly/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly
spec:
  parentRefs:
  - name: internal
    namespace: kube-system
    sectionName: https
  hostnames: ["money.endsys.cloud"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - name: firefly
          port: 80
